--- a/main.html
+++ b/main.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Subheading Creation</title>
 </head>
 <body>
-
+  <h2>Acciojob</h2>
 </body>
 </html>
